2007-07-11  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-fixed.h:
	Fixed CLUTTER_ANGLE_ macros.

	* clutter/clutter-behaviour-ellipse.h:
	* clutter/clutter-behaviour-ellipse.c:
	Implemented "apply" signal closer to position actor on the start
	of the elliptic path.
	
	(clutter_behaviour_ellipse_get_angle_begin):
	(clutter_behaviour_ellipse_set_angle_begin):
	(clutter_behaviour_ellipse_get_angle_end):
	(clutter_behaviour_ellipse_set_angle_end):
	(clutter_behaviour_ellipse_get_angle_tilt):
	(clutter_behaviour_ellipse_set_angle_tilt):
	Renamed with an x suffix; added versions for angles in degrees.
	
2007-07-09  Matthew Allum  <mallum@openedhand.com>

	* TODO:
	Updates.
	* clutter/clutter-stage.c:
	* clutter/glx/clutter-stage-glx.c:
	Fix cursor visibility property. 
	Force a repaint before mapping to attempt to avoid flicker.    

2007-07-09  Richard Purdie  <rpurdie@openedhand.com>

	* clutter/eglnative/clutter-event-egl.c:
	* configure.ac:
	Add tslib support to eglnative backend.

2007-07-09  Richard Purdie  <rpurdie@openedhand.com>

	* clutter/eglnative/clutter-backend-egl.c:
	Tweaks to the eglnative backend.

2007-07-09  Richard Purdie  <rpurdie@openedhand.com>

	* clutter/clutter-backend.c:
	Make the backend add_option function optional.

2007-07-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-depth.h:
	* clutter/clutter-behaviour-depth.c:
	* clutter/Makefile.am: Add ClutterBehaviourDepth, a simple
	behaviour controlling the depth of a set of actors.

	* clutter/clutter-behaviour-opacity.c: Always make sure that
	the opacity applied to the actors is a positive integer, even
	in case where the start and end opacity are reversed; use the
	correct cast macros for passing the opacity as a pointer.

2007-07-06  Matthew Allum  <mallum@openedhand.com>

	* NEWS:
	* configure.ac:
	Update for 0.3.1	

2007-07-06  Matthew Allum  <mallum@openedhand.com>

	* clutter/eglx/Makefile.am:
	* clutter/eglx/clutter-egl.h: